--- a/config
+++ b/config
@@ -738,169 +738,70 @@ new_float normal
 popup_during_fullscreen smart
 
 
+#-- some theme settings
+# tango dark
+set $darkblue           #204A87
+set $darkbrown          #8F5902
+set $darkgreen          #4E9A06
+set $darkmagenta        #5C3566
+set $darkred            #A40000
+set $darkyellow         #C4A000
+set $darkorange         #CE5C00
+
+# tango light
+set $lightblue          #729FCF
+set $lightbrown         #E9B96E
+set $lightgreen         #8AE234
+set $lightmagenta       #AD7FA8
+set $lightred           #EF2929
+set $lightyellow        #FCE94F
+set $lightorange        #FCAF3E
+
+# tango normal
+set $blue               #3465A4
+set $brown              #C17D11
+set $green              #73D216
+set $magenta            #75507B
+set $red                #CC0000
+set $yellow             #EDD400
+set $orange             #F57900
+
+# tango mono
+set $black              #555753
+set $grey               #BABDB6
+set $white              #EEEEEC
+set $darkblack          #2E3436
+set $darkgrey           #888A85
+set $darkwhite          #D3D7CF
 
 
 
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-#################                          bar appearance                                           #################
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-
+# bar appearance
 bar {
-
     # height 25
     workspace_buttons yes
-    font pango:Noto Sans 10
+    font pango:DejaVu Sans, Icons 9
     #you can know the name via xrandr
     #output DVI-0
 
-
-# OPTION 1 : i3status
-
-    # type status_command i3status without the config file and
-    # you will get the standard i3status bar
-    # Second one is the standard statusbar with my personal settings
-
-#status_command i3status
-#status_command i3status -c ~/.config/i3/i3status.conf
-
-
-# OPTION 2 : i3blocks
-
-    # https://github.com/vivien/i3blocks
-    # another way to provide text in the statusbar
-    # put hastag in front if not installed
-
-#status_command i3blocks
-status_command i3blocks -c ~/.config/i3/i3blocks.conf
-#status_command i3blocks -c ~/.config/i3/i3blocks-original.conf
-#status_command i3blocks -c ~/.config/i3/i3blocks-awesome.conf
-
-
-# OPTION 3 : conky
-
+    status_command i3blocks -c ~/.config/i3/i3blocks.conf
     # You can also replace the istatus bar with a conky
     # start-conky-i3statusbar.sh is started and conky will follow
     # documentation : https://i3wm.org/docs/user-contributed/conky-i3bar.html
     # conky configuration is in conky-i3statusbar
+    #status_command ~/.config/i3/start-conky-i3statusbar.sh
 
-#status_command ~/.config/i3/start-conky-i3statusbar.sh
-
-#	colors {
-#		background      #fdf6e3
-#		statusline      #839496
-#		focused_workspace       #cb4b1g #fdf6e3 #839496
-#		active_workspace      	#cb4b1g #fdf6e3 #839496
-#		inactive_workspace      #859900 #fdf6e3 #839496
-#		urgent_workspace        #2aa198 #d33682 #dc322f
-#	}
-
-
-# DarkGrey background with white text - not focus grey background - black text
-# Windows decoration colors
-# class                 border  backgr. text    indicator
-#client.placeholder      #fdf6e3 #fdf6e3 #fdf6e3
-#client.background       #fdf6e3 #fdf6e3 #fdf6e3
-#client.focused		#cb4b16	#fdf6e3	#657b83	#ffffff
-#client.focused_inactive	#586e75	#fdf6e3	#657b83	#ffffff
-#client.unfocused	#586e75	#fdf6e3	#657b83	#ffffff
-#client.urgent		#586e75	#fdf6e3	#657b83	#ffffff
-
-
-#################################################################
-################### BAR APPEARANCE ARCHIVE ######################
-#################################################################
-
-# Orange background with black text - not focus grey background - white text
-# Windows decoration colors
-# class                   border  backgr. text    indicator
-# client.background color         #222222
-# client.focused          #FFAF00 #FFAF00 #333333 #00AA00
-# client.unfocused        #222222 #222222 #aaaaaa #2e9ef4
-# client.focused_inactive #333333 #5f676a #ffffff #484e50
-# client.urgent           #2f343a #900000 #ffffff #900000
-
-
-# DarkGrey background with white text - not focus grey background - black text
-# Windows decoration colors
-# https://i3wm.org/docs/userguide.html#_changing_colors
-# client.background color
-# class                   border  backgr. text    indicator
- client.focused          #4c7899 #285577 #ffffff #2e9ef4
- client.focused_inactive #333333 #5f676a #ffffff #484e50
- client.unfocused        #333333 #222222 #888888 #292d2e
- client.urgent           #2f343a #900000 #ffffff #900000
- client.placeholder      #000000 #0c0c0c #ffffff #000000
-
-   colors {
-            background #222222
-            statusline #eeeeee
-            separator #666666
-             #                  border  backgr. text
-            focused_workspace  #4c7899 #285577 #ffffff
-            active_workspace   #333333 #5f676a #ffffff
-            inactive_workspace #333333 #222222 #888888
-            urgent_workspace   #2f343a #900000 #ffffff
+    colors {
+        # tango jungle <workclass> <border> <backg> <text>
+        focused_workspace   $green $darkgreen $white
+        active_workspace    $brown $darkbrown $grey
+        inactive_workspace  $black $darkblack $grey
+        urgent_workspace    $yellow $darkyellow $white
+        background #222222
+        separator  $lightgreen
+        statusline $grey
     }
-
 }
-# Alternatives
-# BLue and grey Colors
-# https://github.com/Gravemind/ArchLinux/blob/master/.i3/config
-# class                   border  backgr. text    indicator
-# client.focused          #000000 #285577 #dddddd #0099ff
-# client.focused_inactive #000000 #333333 #888888 #484e50
-# client.unfocused        #000000 #000000 #555555 #292d2e
-# client.urgent           #2f343a #900000 #ffffff #900000
-
-# blue background with white text
-# Windows decoration colors
-# class                   border  backgr. text    indicator
-# client.background color         #222222
-# client.focused          #4c7899 #285577 #ffffff #2e9ef4
-# client.focused_inactive #333333 #5f676a #ffffff #484e50
-# client.unfocused        #333333 #222222 #888888 #292d2e
-# client.urgent           #2f343a #900000 #ffffff #900000
-
-# Blue-green background - orange text
-# Windows decoration colors
-# http://www.fastlinux.eu/_archiv/index.php?page=linux047
-# class                    border  backgr. text
-# client.focused           #2B6473 #2B6473 #FFA000
-# client.focused_inactive  #004050 #004050 #FFA000
-# client.unfocused         #004050 #004050 #cccccc
-# client.urgent            #900000 #900000 #ffffff
-
-
-# Red background - black text
-# Windows decoration colors
-# https://github.com/Blueblur/dotfiles/blob/master/.i3/config
-# class                 border  backgr. text    indicator
-# client.focused          #d64937 #d64937 #2D2D2D #2e9ef4
-# client.focused_inactive #2d2d2d #2d2d2d #dcdcdc #484e50
-# client.unfocused        #2D2D2D #2d2d2d #dcdcdc #292d2e
-# client.urgent           #2D2D2D #2D2D2D #dcdcdc #900000
-
-
-
-
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-########################################               THE   END          ###########################################
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-#####################################################################################################################
-
-
-
 
 
 #####################################################################################################################
