--- a/config
+++ b/config
@@ -206,7 +206,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
-bindsym $mod+$right focus right
+#bindsym $mod+$right focus right
 
 # alternatively, you can use the cursor keys:
 #bindsym $mod+Left focus left
