call caommand to disable TouchPad mouse control. I do not use touch pad and this only cased me troubles. see https://unix.stackexchange.com/questions/32992/thinkpad-disable-trackpoint#33011

--- a/config
+++ b/config
@@ -882,4 +882,6 @@ exec --no-startup-id /usr/bin/riot-desktop
 exec --no-startup-id /usr/bin/sonata
 exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id redshift-gtk -l 50:15 -t 5500:4200
+#-- disable touchPad mouse control - tsi only cased troubles for me
+exec --no-startup-id /usr/bin/synclient TouchpadOff=1
 
