using custom i3blocks script

--- a/i3blocks-ssc.conf
+++ b/i3blocks-ssc.conf
@@ -34,54 +34,64 @@
 # Each block command defaults to the script name to avoid boilerplate.
 
 # Archlinux
-#command=/usr/lib/i3blocks/$BLOCK_NAME
+command=/usr/lib/i3blocks/$BLOCK_NAME
 
 # Debian
-command=/usr/share/i3blocks/$BLOCK_NAME
+#command=/usr/share/i3blocks/$BLOCK_NAME
 
 separator_block_width=15
 markup=none
 
-[mail]
-label=
-command=find ~/Mail -type d -name new -exec ls -1 {} \; |wc -l
-interval=10
+#[mail]
+#label=
+#command=find ~/Mail -type d -name new -exec ls -1 {} \; |wc -l
+#interval=10
 
-[home]
-command=df -h /home | awk '/home/{ print "/home "$4 }'
-interval=30
+#[home]
+#command=df -h /home | awk '/home/{ print "/home "$4 }'
+#interval=30
 
 [wifi]
 label=
-command=~/.i3/i3block-scripts/wifi.py
-interval=5
+#label=wifi
+command=~/.config/i3/i3block-scripts/wifi.py
+interval=10
 separator=false
 
 [iface]
 label=
-command=~/.i3/i3block-scripts/net.py
-interval=5
+command=~/.config/i3/i3block-scripts/net.py
+interval=10
 
 [cpu_usage]
 label=
-interval=10
+interval=5
 separator=false
+
+[load_average]
+label=
+interval=5
 
 [temperature]
 label=
 interval=10
 
-[volume]
-label=♪
-instance=Master
-interval=5
+#[volume]
+#label=♪
+#instance=Master
+#interval=5
 
 [battery]
-label=
-interval=5
+label=int
+interval=10
+
+[battery]
+label=ext
+command=BLOCK_INSTANCE=1 /usr/lib/i3blocks/battery
+interval=10
 
 [time]
 label=
-command=date "+%a, %b %_d %Y %I:%M:%S"
-interval=1
+command=date "+%d.%m %H:%M"
+interval=10
 
